check argument to fix

--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -6,7 +6,7 @@
 #    By: darbib <darbib@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/12/03 12:23:24 by darbib            #+#    #+#              #
-#    Updated: 2021/02/19 11:14:43 by darbib           ###   ########.fr        #
+#    Updated: 2021/02/24 15:51:39 by darbib           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,7 +19,7 @@ ORANGE = 	'\033[0;33m'
 MAGENTA = 	'\033[0;35m'
 RESET = 	'\033[0m'
 
-NAME = minishell
+NAME = philo_one
 CFLAGS= -Wall -Wextra -Werror 
 CC = clang
 
@@ -38,62 +38,15 @@ SRC_DIR = ./srcs/
 
 # ------------------------------------------------------------------------------
 
-LIBFT_DIR = ./libft/
-LIBFT = libft.a
-LIB_LIBFT += $(addprefix $(LIBFT_DIR), $(LIBFT))
-
-LDFLAGS = $(addprefix -L, $(LIBFT_DIR))
-LDFLAGS += -lft
 OBJ = $(SRC:%.c=$(OBJ_DIR)%.o)
 
-INC_DIRS = ./libft/includes \
-		  ./includes
+INC_DIRS = includes \
 
 INC = $(addprefix -I, $(INC_DIRS))
 
-SRC = lexer.c \
-	  parser.c \
-	  token.c \
-	  error.c \
-	  destroy.c \
-	  obj_destructor.c \
-	  list_pipeline_destructor.c \
-	  token_destructor.c \
-	  char_handling_fts.c \
-	  lexer_fsm_tools.c \
-	  assignment_detector.c \
-	  assignment_parser.c \
-	  ionumber_detector.c \
-	  redirection_parser.c \
-	  isredirection_op.c \
-	  args_parser.c \
-	  minishell.c \
-	  execution.c \
-	  evaluation.c \
-	  simple_command_parser.c \
-	  pipeline_parser.c \
-	  shell_list_parser.c \
-	  environ_transform.c \
-	  envlist_interface.c \
-	  lookup_value.c \
-	  parser_interface.c \
-	  ft_env.c \
-	  expansion.c \
-	  expansion_actions.c \
-	  expansion_fetch.c \
-	  expansion_init_and_tools.c \
-	  expansion_init_tables.c \
-	  expansion_application.c \
-	  ft_echo.c \
-	  ft_cd.c \
-	  ft_pwd.c \
-	  ft_exit.c \
-	  ft_unset.c \
-	  ft_export.c \
-	  free.c \
-	  signals.c \
-	  built_ins.c \
-	  export_check_arg.c \
+SRC = philo_one.c \
+	  tools.c \
+	  print_functions.c \
 
 # ------------------------------------------------------------------------------
 
@@ -114,10 +67,6 @@ $(OBJ_DIR)%.o : $(SRC_DIR)%.c
 	@mkdir -p objs
 	$(CC) $(INC) $(CFLAGS) -c $< -o $@
 
-$(LIB_LIBFT) :
-	@echo "Compile libft.."
-	@make DEBUG=$(DEBUG) -C $(LIBFT_DIR)
-
 clean :
 	@echo $(MAGENTA) "Cleaning objs..." $(RESET)
 	@rm -rf $(OBJ_DIR)
@@ -128,7 +77,6 @@ clean :
 fclean : clean
 	@echo $(MAGENTA) "Total cleaning..." $(RESET)
 	@rm -f $(NAME)
-	@rm -f $(LIB_LIBFT)
 	@echo $(MAGENTA) "...done" $(RESET)
 
 test: 
