--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -6,7 +6,7 @@
 #    By: darbib <darbib@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/12/03 12:23:24 by darbib            #+#    #+#              #
-#    Updated: 2021/03/04 00:25:00 by darbib           ###   ########.fr        #
+#    Updated: 2021/03/18 12:49:58 by darbib           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,6 +50,8 @@ SRC = philo_one.c \
 	  print.c \
 	  time_tools.c \
 	  actions.c \
+	  simulation.c \
+	  handle_args.c
 
 # ------------------------------------------------------------------------------
 
